Fix minor layout issues from design

--- a/_sass/app/components/_sidebar-signup.scss
+++ b/_sass/app/components/_sidebar-signup.scss
@@ -17,7 +17,7 @@
     padding-bottom: 10px;
     padding-top: 10px;
     font-size: $fs-9;
-    font-weight: $fw-normal;
+    font-weight: $fw-semibold;
   }
 
   &__employer-link {
